--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  color:  turquoise;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#users-list li {
+  margin: 10px 0;
+  list-style: none;
+}
+
+#list-pages {
+  display: flex;
+  list-style: none;
+}
+
+#list-pages li {
+  margin: 0 10px;
+  background-color: turquoise;
+  padding: 5px 0;
+  border-radius: 4px;
+}
+
+a {
+  flex: 1;
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px;
 }
